[gd_scene load_steps=15 format=3 uid="uid://bhva1tc2tnv77"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_b0b15"]
[ext_resource type="Script" path="res://Player/smooth_camera.gd" id="2_1brkh"]
[ext_resource type="Script" path="res://Player/interaction.gd" id="3_hff7t"]
[ext_resource type="Script" path="res://Player/corsshair.gd" id="3_jgbva"]
[ext_resource type="Script" path="res://Player/hand.gd" id="4_ilble"]
[ext_resource type="Script" path="res://Player/logic.gd" id="5_khhlg"]
[ext_resource type="PackedScene" uid="uid://cu2efk6dyqge5" path="res://Utilities/magnetic.tscn" id="5_kv1sy"]
[ext_resource type="Script" path="res://Player/magnetic_ui.gd" id="7_lcooq"]
[ext_resource type="PackedScene" uid="uid://e85whmjdcm35" path="res://Player/Menu/menu.tscn" id="7_s6trm"]
[ext_resource type="Texture2D" uid="uid://dn5x281o4a63o" path="res://Arts/Prototype/Dark/texture_06.png" id="8_6qoht"]
[ext_resource type="Texture2D" uid="uid://dfbyxnlfenyky" path="res://Arts/Prototype/Red/texture_07.png" id="10_vajog"]
[ext_resource type="Texture2D" uid="uid://di3w3pebatgtf" path="res://Arts/Prototype/Blue/texture_03.png" id="11_yt84o"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_uwcpl"]
radius = 0.3
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_61h40"]
radius = 0.3
height = 1.8

[node name="Player" type="CharacterBody3D"]
collision_mask = 14
slide_on_ceiling = false
platform_floor_layers = 4294967281
platform_wall_layers = 4
script = ExtResource("1_b0b15")
head_x_min_degree = -60.0
head_x_max_degree = 70.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_uwcpl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_61h40")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Cameras" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
top_level = true
script = ExtResource("2_1brkh")

[node name="RenderCamera" type="Camera3D" parent="Head/Cameras"]
current = true

[node name="Interaction" type="RayCast3D" parent="Head/Cameras"]
target_position = Vector3(0, 0, -3)
collision_mask = 22
script = ExtResource("3_hff7t")

[node name="Hand" type="Marker3D" parent="Head/Cameras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.8)
gizmo_extents = 0.5
script = ExtResource("4_ilble")

[node name="Logic" type="Node" parent="."]
script = ExtResource("5_khhlg")

[node name="Magnetic" parent="Logic" node_paths=PackedStringArray("host") instance=ExtResource("5_kv1sy")]
host = NodePath("../..")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="Control" parent="UI/CenterContainer"]
layout_mode = 2
script = ExtResource("3_jgbva")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MagneticUI" type="TextureRect" parent="UI/MarginContainer"]
modulate = Color(1, 1, 1, 0.392157)
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("8_6qoht")
expand_mode = 1
script = ExtResource("7_lcooq")
positive_texture = ExtResource("10_vajog")
normal_texture = ExtResource("8_6qoht")
negative_texture = ExtResource("11_yt84o")

[node name="MagneticUI2" type="TextureRect" parent="UI/MarginContainer"]
modulate = Color(1, 1, 1, 0.392157)
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("8_6qoht")
expand_mode = 1
script = ExtResource("7_lcooq")
positive_texture = ExtResource("10_vajog")
normal_texture = ExtResource("8_6qoht")
negative_texture = ExtResource("11_yt84o")

[node name="MagneticUI3" type="TextureRect" parent="UI/MarginContainer"]
modulate = Color(1, 1, 1, 0.392157)
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("8_6qoht")
expand_mode = 1
script = ExtResource("7_lcooq")
positive_texture = ExtResource("10_vajog")
normal_texture = ExtResource("8_6qoht")
negative_texture = ExtResource("11_yt84o")

[node name="MagneticUI4" type="TextureRect" parent="UI/MarginContainer"]
modulate = Color(1, 1, 1, 0.392157)
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("8_6qoht")
expand_mode = 1
script = ExtResource("7_lcooq")
positive_texture = ExtResource("10_vajog")
normal_texture = ExtResource("8_6qoht")
negative_texture = ExtResource("11_yt84o")

[node name="Menu" parent="." instance=ExtResource("7_s6trm")]
z_index = 999

[connection signal="colliding_state_changed" from="Head/Cameras/Interaction" to="UI/CenterContainer/Crosshair" method="_on_interaction_colliding_state_changed"]
[connection signal="left_mouse_clicked" from="Head/Cameras/Interaction" to="Head/Cameras/Hand" method="_on_interaction_left_mouse_clicked"]
[connection signal="right_mouse_clicked" from="Head/Cameras/Interaction" to="Logic" method="_on_interaction_right_mouse_clicked"]
[connection signal="held" from="Head/Cameras/Hand" to="Head/Cameras/Interaction" method="_on_hand_held"]
[connection signal="released" from="Head/Cameras/Hand" to="Head/Cameras/Interaction" method="_on_hand_released"]
[connection signal="plority_changed" from="Logic/Magnetic" to="UI/MarginContainer/MagneticUI" method="_on_magnetic_plority_changed"]
[connection signal="plority_changed" from="Logic/Magnetic" to="UI/MarginContainer/MagneticUI2" method="_on_magnetic_plority_changed"]
[connection signal="plority_changed" from="Logic/Magnetic" to="UI/MarginContainer/MagneticUI3" method="_on_magnetic_plority_changed"]
[connection signal="plority_changed" from="Logic/Magnetic" to="UI/MarginContainer/MagneticUI4" method="_on_magnetic_plority_changed"]
